[tool.poetry]
name = "story-notebooks"
version = "0.1.0"
description = ""
authors = ["Olivier Dupuis <olivier@republicofdata.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
damn-tool = { path = "/Users/olivierdupuis/dev/damn", develop = true }
google-cloud-bigquery = "^3.27.0"
pandas = "^2.2.3"
db-dtypes = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
